--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <title>Sloane Zhang</title>
+    <title>Yimiao Zhang</title>
     
   </head>
   <body>
